feat: add getProjects Service
kept token globally for dev purposes
Write Fetch Projects Service
Copy rest api routes from web app
rewrite models from types
